syntax = "proto3";

package xactserver;

message PrepareRequest {
    uint32 from = 1;
    uint64 xact_id = 2;
    bytes data = 3;
}

message PrepareResponse {
}

enum Vote {
    COMMIT = 0;
    ABORT = 1;
}

message VoteRequest {
    uint32 from = 1;
    uint64 xact_id = 2;
    Vote vote = 3;
}

message VoteResponse {
}

service XactCoordination {
    rpc Prepare(PrepareRequest) returns (PrepareResponse);
    rpc Vote(VoteRequest) returns (VoteResponse);
}

